--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -806,7 +806,8 @@ live_config_reload: true
 #
 # If the same trigger is assigned to multiple actions, all of them are executed
 # in the order they were defined in.
-#key_bindings:
+key_bindings:
+  - { key: E,        mods: Alt,     chars: "\x1be"                       } # used to open current shell command in a text editor
   #- { key: Paste,                                       action: Paste          }
   #- { key: Copy,                                        action: Copy           }
   #- { key: L,         mods: Control,                    action: ClearLogNotice }
